--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  background-color: red;
 }
 
 .main-content {
@@ -17,7 +16,7 @@
 
 .content {
   flex: 1;
-  padding: 20px;
+  background-color: #F9F9FC;
 }
 
 
