--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <div class="layout-container">
   <!-- HEADER -->
-
   <div class="main-content">
     <!-- SIDEBAR -->
     <app-sidebar></app-sidebar>
 
     <!-- ASOSIY CONTENT -->
     <div class="content bg-white">
-      <router-outlet></router-outlet>
+      <app-header />
+      <div class="p-5">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 
