--- a/src/app/pages/news/news-create/news-create.component.html
+++ b/src/app/pages/news/news-create/news-create.component.html
@@ -104,7 +104,7 @@
       </button> -->
 
       <button
-        class="bg-purple-500 text-white px-2 py-2 rounded shadow-md hover:bg-purple-600 transition-all flex items-center"
+        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 transition-all flex items-center text-sm font-poppins"
         (click)="addLanguage('ru')"
       >
         <mat-icon class="mat-18">add</mat-icon>
@@ -113,7 +113,7 @@
     </div>
 
     <button
-      class="bg-blue-500 text-white px-6 py-3 rounded shadow-md hover:bg-blue-600 transition-all mt-3 self-start"
+      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 transition-all mt-3 self-start"
       type="submit"
     >
       Create News
