--- a/src/app/pages/news/news-create/news-create.component.html
+++ b/src/app/pages/news/news-create/news-create.component.html
@@ -1,4 +1,6 @@
 <div class="p-mb-4 bg-white text-black p-5 w-[100%] min-h-screen">
+  <p-toast />
+
   <p class="text-2xl font-bold text-black mb-5">Yangilik yaratish</p>
   <form
     [formGroup]="newsForm"
@@ -116,7 +118,7 @@
       class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 transition-all mt-3 self-start"
       type="submit"
     >
-      Create News
+      Saqlash
     </button>
   </form>
 </div>
