--- a/src/app/pages/news/news-list/news-list.component.html
+++ b/src/app/pages/news/news-list/news-list.component.html
@@ -2,10 +2,23 @@
   <div class="flex items-center w-full justify-between my-3">
     <p class="font-bold text-xl font-poppins">Yangiliklar</p>
 
-    <a [routerLink]="['/news/create']" routerLinkActive="router-link-active" class="flex items-center gap-3 bg-purple-500 py-3 px-4 rounded-lg text-white font-poppins text-sm hover:bg-purple-600">
+    <a
+      [routerLink]="['/news/create']"
+      routerLinkActive="router-link-active"
+      class="flex items-center gap-3 bg-purple-500 py-3 px-4 rounded-lg text-white font-poppins text-sm hover:bg-purple-600"
+    >
       <mat-icon svgIcon="plus" class="!w-[16px]"></mat-icon>
       Yangilik yaratish
     </a>
+  </div>
+  <div *ngIf="!newsList()?.length" class="h-[240px] flex flex-col items-center w-full justify-center">
+    <p-progress-spinner
+      strokeWidth="4"
+      fill="transparent"
+      animationDuration=".5s"
+      [style]="{ width: '70px', height: '70px' }"
+    />
+    <p>Yuklanmoqda....</p>
   </div>
 
   <div
