--- a/src/app/components/editor/editor.component.scss
+++ b/src/app/components/editor/editor.component.scss
@@ -1,4 +1,3 @@
-
 :host ::ng-deep ngx-editor-menu {
   background-color: gray !important;
   color: black !important;
@@ -7,26 +6,42 @@
 /* Agar tugmalar yoki boshqa elementlar ham qora rangda bo‘lishini xohlasangiz */
 :host ::ng-deep ngx-editor-menu * {
   color: black !important;
+
+
 }
 
 :host ::ng-deep ngx-editor {
+
   width: 100%;
   display: block;
-  border: none!important;
-  box-shadow: none !important; /* Agar border o‘rniga soyalar bo‘lsa */
-  .NgxEditor__Content{
+  border: none !important;
+  box-shadow: none !important;
+
+  /* Agar border o‘rniga soyalar bo‘lsa */
+  .NgxEditor__Content {
     border: none;
     min-height: 330px;
-    border: none!important;
-    border-color: transparent!important;
-    border-style: none!important;
-    border-width: 0!important;
-    outline: none!important;
+    border: none !important;
+    border-color: transparent !important;
+    border-style: none !important;
+    border-width: 0 !important;
+    outline: none !important;
   }
 }
 
-.NgxEditor{
-  border: none!important;
+:host ::ng-deep ngx-editor-content {
+  all: revert;
+  font-family: initial;
+  font-size: initial;
+  line-height: normal;
+
+
+}
+
+
+
+.NgxEditor {
+  border: none !important;
 }
 
 
