added unsplash and documents

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <div class="main-content">
     <!-- SIDEBAR -->
-    <app-sidebar></app-sidebar>
+    <app-sidebar class="md:w-auto w-0"></app-sidebar>
 
     <!-- ASOSIY CONTENT -->
     <div class="content bg-white">
