--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,36 @@
 <div
-  class="flex items-center justify-between bg-white text-white px-6 py-2 shadow-md"
+  class="bg-white px-4 md:px-6 py-2 shadow-md flex flex-wrap items-center justify-between gap-4 sticky top-0 md:static z-10"
 >
-  <div class="flex items-center space-x-4">
+  <!-- Chap qism (Search) -->
+  <div class="flex-1 min-w-[200px]">
     <app-input placeholder="Search" icon="search" />
   </div>
 
-  <div class="flex items-center space-x-6">
-    <button>
-      <app-badge icon="calendar" [notifications]="4" />
-    </button>
-    <button>
-      <app-badge icon="bell" [notifications]="0" />
-    </button>
-    <button>
-      <app-badge icon="envelope" [notifications]="0" />
-    </button>
-
-    <div class="flex items-center space-x-3">
-      <div
-        class="w-8 h-8 bg-gray-600 rounded-full flex items-center justify-center relative"
+  <!-- O'ng qism (Badge'lar + User info) -->
+  <div class="flex items-center gap-4 md:gap-6 flex-wrap justify-end mb-3">
+    <!-- Notifications -->
+      <button
+        class="md:hidden bg-white px-2 pt-2 rounded-full shadow-lg"
+        (click)="menuService.setIsOpen(true)"
       >
-        <span class="text-white font-semibold">JH</span>
-        <span class="w-3 h-3 bg-green-500 rounded-full absolute -right-1 -bottom-[1px]"></span>
+        <mat-icon>menu</mat-icon>
+      </button>
+
+    <!-- User Avatar + Info -->
+    <div class="flex items-center gap-3">
+      <div
+        class="w-8 h-8 bg-gray-600 rounded-full flex items-center justify-center relative shrink-0"
+      >
+        <span class="text-white font-semibold text-sm">JH</span>
+        <span
+          class="w-3 h-3 bg-green-500 rounded-full absolute -right-1 -bottom-[1px]"
+        ></span>
       </div>
-      <div>
-        <p class="text-sm font-medium text-neutral-900 font-poppins">{{ userName }}</p>
+
+      <div class="hidden sm:flex flex-col text-left">
+        <p class="text-sm font-medium text-neutral-900 font-poppins">
+          {{ userName }}
+        </p>
         <p class="text-xs text-gray-400">{{ userRole }}</p>
       </div>
     </div>
