--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,34 @@
+<!-- Overlay for mobile -->
 <div
-  class="bg-white min-h-screen max-w-[264px] w-[264px] shadow-[5px_35px_35px_rgba(242,242,250,0.9)] z-2 sticky top-0"
+  class="fixed inset-0 bg-black/30 z-40 transition-opacity duration-500"
+  *ngIf="menuServiceForSidebar.isOpen()"
+  (click)="menuServiceForSidebar.setIsOpen(false)"
+></div>
+
+<!-- Sidebar -->
+<div
+  class="bg-white min-h-screen max-w-[264px] w-[264px] shadow-[5px_35px_35px_rgba(242,242,250,0.9)] z-50 sticky md:static top-0 transition-all duration-700 ease-in-out fixed md:translate-x-0 md:top-0 md:left-0 h-full flex flex-col transform md:transform-none"
+  [ngClass]="{
+    '-translate-x-full': !menuServiceForSidebar.isOpen(),
+    'translate-x-0': menuServiceForSidebar.isOpen()
+  }"
 >
-  <div class="p-5">
-    <img src="assets/logo.svg" alt />
+  <!-- Close Button (Mobile only) -->
+  <div class="md:hidden flex justify-end p-4">
+    <button
+      (click)="menuServiceForSidebar.setIsOpen(false)"
+      class="text-gray-500 hover:text-red-500 transition"
+    >
+      <mat-icon>highlight_off</mat-icon>
+    </button>
   </div>
+
+  <!-- Logo -->
+  <div class="p-5">
+    <img src="assets/logo.svg" alt="Logo" />
+  </div>
+
+  <!-- Nav Links -->
   <ul class="mt-4 flex flex-col gap-2 px-2">
     <li>
       <app-active-link
@@ -12,8 +37,7 @@
         [link]="['/dashboard']"
         [activeClass]="'active'"
         [className]="'flex items-center text-gray-400 gap-2 p-4 font-poppins'"
-      >
-      </app-active-link>
+      ></app-active-link>
     </li>
     <li>
       <app-active-link
@@ -22,8 +46,7 @@
         [link]="['/news']"
         [activeClass]="'active'"
         [className]="'flex items-center text-gray-400 gap-2 p-4 font-poppins'"
-      >
-      </app-active-link>
+      ></app-active-link>
     </li>
     <li>
       <app-active-link
@@ -32,8 +55,7 @@
         [link]="['/pages']"
         [activeClass]="'active'"
         [className]="'flex items-center text-gray-400 gap-2 p-4 font-poppins'"
-      >
-      </app-active-link>
+      ></app-active-link>
     </li>
     <li>
       <app-active-link
@@ -42,8 +64,7 @@
         [link]="['/documents']"
         [activeClass]="'active'"
         [className]="'flex items-center text-gray-400 gap-2 p-4 font-poppins'"
-      >
-      </app-active-link>
+      ></app-active-link>
     </li>
   </ul>
 </div>
