--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,7 +1,13 @@
 .chart-container {
-  border-radius: 16px; /* Yengil yumaloqlik */
-  overflow: hidden; /* Chekkalarni to‘g‘ri kesish */
+  border-radius: 16px;
+  /* Yengil yumaloqlik */
+  overflow: hidden;
+  /* Chekkalarni to‘g‘ri kesish */
   background-color: white;
   padding: 20px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+:host ::ng-deep .p-card {
+  background: transparent !important;
+  color: white;
 }
