--- a/src/app/pages/news/news-create/news-create.component.html
+++ b/src/app/pages/news/news-create/news-create.component.html
@@ -7,7 +7,7 @@
     (ngSubmit)="onSubmit()"
     class="w-full flex flex-col gap-4"
   >
-    <div class="grid grid-cols-2 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <div class="flex flex-col gap-3 w-full">
         <app-input
           label="Linkni kiriting"
