--- a/src/app/pages/news/news-list/news-list.component.html
+++ b/src/app/pages/news/news-list/news-list.component.html
@@ -11,7 +11,10 @@
       Yangilik yaratish
     </a>
   </div>
-  <div *ngIf="!newsList()?.length" class="h-[240px] flex flex-col items-center w-full justify-center">
+  <div
+    *ngIf="!newsList()?.length"
+    class="h-[240px] flex flex-col items-center w-full justify-center"
+  >
     <p-progress-spinner
       strokeWidth="4"
       fill="transparent"
@@ -26,7 +29,7 @@
     class="grid grid-cols-1 justify-center bg-white rounded-xl overflow-hidden shadow-md"
   >
     <div
-      class="grid grid-cols-[595px_150px_150px_auto] w-full m-auto gap-3 justify-items-center hover:bg-slate-200 transition-all duration-[750ms] p-[18px] font-poppins text-sm font-semibold text-neutral-800"
+      class=" hidden md:grid grid-cols-[595px_150px_150px_auto] w-full m-auto gap-3 justify-items-center hover:bg-slate-200 transition-all duration-[750ms] p-[18px] font-poppins text-sm font-semibold text-neutral-800"
     >
       <p class="text-left w-full">Yangilik nomi</p>
       <p class="w-full">Vaqti</p>
@@ -34,45 +37,56 @@
       <p class="w-full">Amallar</p>
     </div>
     <div
-      class="grid grid-cols-[595px_150px_150px_auto] w-full m-auto gap-3 items-center hover:bg-slate-200 transition-all duration-[150ms] p-[18px] font-poppins"
       *ngFor="let news of newsList(); let i = index"
+      class="w-full m-auto p-[18px] font-poppins transition-all duration-150 hover:bg-slate-100 rounded-md flex flex-col gap-4 md:grid md:grid-cols-[1fr_150px_100px_auto] md:items-center md:gap-3"
     >
-      <div class="flex items-center w-full gap-2">
-        <img [src]="apiUrl + news.image" class="w-11 h-11 rounded-md" />
-        <div class="grid grid-row-[25px_20px]">
-          <p class="line-clamp-1 text-sm">
-            {{ news.contents!["uz"].title }}
+      <!-- Rasm + Sarlavha + Slug -->
+      <div class="flex items-center gap-3">
+        <img
+          [src]="apiUrl + news.image"
+          class="w-11 h-11 rounded-md object-cover shrink-0"
+          alt="image"
+        />
+        <div class="flex flex-col overflow-hidden">
+          <p class="text-sm font-medium text-gray-800 line-clamp-1">
+            {{ news.contents?.["uz"]?.title }}
           </p>
-          <p class="line-clamp-1 text-[12px] text-gray-500">
-            {{ news.slug }}
-          </p>
+          <p class="text-[12px] text-gray-500 line-clamp-1">{{ news.slug }}</p>
         </div>
       </div>
-      <p class="text-xs text-gray-600">
-        {{ news.createdAt | date : "dd MMM yyyy" }}
-      </p>
-      <p class="text-xs text-gray-600">
-        {{ 1000 }}
-      </p>
-      <div class="flex gap-3">
+
+      <!-- Sana -->
+      <div class="flex flex-row md:flex-col w-full md:w-auto justify-between">
+        <p class="text-xs text-gray-600 flex items-center ">
+          <mat-icon  class="!w-[12px] !h-[12px] text-[11px]" >date_range</mat-icon>
+          {{ news.createdAt | date : "dd MMM yyyy" }}
+        </p>
+
+        <!-- Ko‘rish soni (hozircha 1000) -->
+        <p class="text-xs text-gray-600 flex items-center gap-2">
+          <mat-icon svgIcon="eye" class="!w-[10px]"></mat-icon> 1000
+        </p>
+      </div>
+
+      <!-- Actions -->
+      <div class="flex gap-2 justify-start md:justify-end">
         <button
-          class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-green-600 w-8 h-8 rounded-full"
+          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-green-600 rounded-full transition-all"
         >
           <mat-icon
-            class="text-inherit !w-[16px] !h-[16px]"
             svgIcon="pencil"
+            class="!w-[16px] !h-[16px] text-inherit"
           ></mat-icon>
         </button>
         <button
-          class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-purple-600 w-8 h-8 rounded-full"
+          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-purple-600 rounded-full transition-all"
         >
-          <mat-icon class="!w-[16px] !h-[16px]" svgIcon="eye"></mat-icon>
+          <mat-icon svgIcon="eye" class="!w-[16px] !h-[16px]"></mat-icon>
         </button>
-
         <button
-          class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-red-600 w-8 h-8 rounded-full"
+          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-red-600 rounded-full transition-all"
         >
-          <mat-icon class="!w-[16px] !h-[16px]" svgIcon="trash"></mat-icon>
+          <mat-icon svgIcon="trash" class="!w-[16px] !h-[16px]"></mat-icon>
         </button>
       </div>
     </div>
