--- a/src/app/pages/page/creator/creator.component.html
+++ b/src/app/pages/page/creator/creator.component.html
@@ -1,94 +1,155 @@
-<div class="p-mb-4 bg-white text-black p-5 w-[100%] min-h-screen">
+<div class="p-mb-4 bg-white text-black p-5 w-full min-h-screen">
   <p-toast />
-
+  <button (click)="messageOpen()">Click</button>
   <p class="text-2xl font-bold text-black mb-5">Sahifa yaratish</p>
+
   <form
     [formGroup]="newsForm"
     (ngSubmit)="onSubmit()"
     class="w-full flex flex-col gap-4"
   >
+    <!-- PAGE & TYPE SELECT -->
     <div class="grid grid-cols-2 gap-6">
-
       <app-select
+        [label]="'Sahifani tanlang'"
+        [placeholder]="'Sahifani tanlang'"
         [required]="true"
-        label="Sahifani tanlang"
-        placeholder="Sahifani tanlang"
         [options]="options"
         [control]="getFormControl(newsForm.get('page'))"
         [errorControl]="getFormControlError('page') || ''"
       />
-    </div>
-    <div *ngFor="let lang of languageFor; let i = index">
-      <ng-container *ngIf="contents.get(lang) as control">
-        <div class="border p-4 rounded-md bg-gray-100">
-          <p class="text-lg font-semibold mb-3">
-            Til: {{ languageForTranslatation[lang] }}
-          </p>
 
+      <app-select
+        [label]="'Sahifa turi'"
+        [placeholder]="'Kontent yoki Hujjatlar'"
+        [required]="true"
+        [options]="[
+          { label: 'Kontent', value: 'content' },
+          { label: 'Hujjatlar', value: 'documents' }
+        ]"
+        [control]="getFormControl(newsForm.get('type'))"
+        [errorControl]="getFormControlError('type') || ''"
+      />
+    </div>
+
+    <!-- === CONTENT TYPE === -->
+    <ng-container *ngIf="newsForm.get('type')?.value === 'content'">
+      <div *ngFor="let lang of languageFor">
+        <ng-container *ngIf="contents.get(lang) as control">
+          <div class="border p-4 rounded-md bg-gray-100 mb-4">
+            <p class="text-lg font-semibold mb-3">
+              Til: {{ languageForTranslatation[lang] }}
+            </p>
+
+            <app-input
+              label="Sarlavhani kiriting"
+              [control]="control.get('title')"
+              [required]="true"
+              [placeholder]="'Sarlavhani kiriting'"
+              [errorControl]="
+                getFormControlError('translations.' + lang + '.title') || ''
+              "
+            />
+
+            <app-textarea
+              [label]="
+                'Qisqacha tavsif (' +
+                languageForTranslatation[lang].toLowerCase() +
+                ')'
+              "
+              [required]="true"
+              [control]="getFormControl(control.get('description'))"
+              [errorControl]="
+                getFormControlError('translations.' + lang + '.description') ||
+                ''
+              "
+              class="mb-4"
+            ></app-textarea>
+
+            <app-editor
+              [label]="
+                'To‘liq kontent (' +
+                languageForTranslatation[lang].toLowerCase() +
+                ')'
+              "
+              [required]="true"
+              [control]="getFormControl(control.get('content'))"
+              [errorControl]="
+                getFormControlError('translations.' + lang + '.content') || ''
+              "
+              class="mb-4"
+            ></app-editor>
+          </div>
+        </ng-container>
+      </div>
+      <div class="mt-3 flex gap-2">
+        <button
+          type="button"
+          (click)="addLanguage('ru')"
+          class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm"
+        >
+          <mat-icon class="mat-18">add</mat-icon>
+          Rus tilida
+        </button>
+      </div>
+    </ng-container>
+
+    <!-- === DOCUMENT TYPE === -->
+    <ng-container
+      *ngIf="newsForm.get('type')?.value === 'documents' && documentOptions"
+    >
+      <div
+        formArrayName="documents"
+        class="grid grid-cols-1 md:grid-cols-2 gap-5"
+      >
+        <div
+          *ngFor="let group of documentArray.controls; let i = index"
+          [formGroupName]="i"
+          class="border p-4 rounded bg-gray-50"
+        >
           <app-input
-            label="Sarlavhani kiriting"
-            [control]="control.get('title')"
-            [required]="true"
-            [placeholder]="'Sarlavhani kiriting'"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.title') || ''
-            "
-          ></app-input>
+            [label]="'Hujjat guruhi nomi (ixtiyoriy)'"
+            [placeholder]="'Masalan: Moliyaviy hujjatlar'"
+            [control]="group.get('title')"
+            [required]="false"
+          />
 
-          <app-textarea
+          <app-multiselect
+            [label]="'Hujjatlarni tanlang'"
+            [placeholder]="'Hujjatlar'"
+            [options]="documentOptions"
+            [control]="getFormControl(group.get('documentIds'))"
             [required]="true"
-            [label]="
-              'Qisqacha tavsif (' +
-              languageForTranslatation[lang].toLowerCase() +
-              ')'
-            "
-            [control]="getFormControl(control.get('description'))"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.description') || ''
-            "
-            class="mb-4"
+          />
+
+          <button
+            *ngIf="documentArray.length > 1"
+            type="button"
+            (click)="removeDocumentGroup(i)"
+            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full"
           >
-          </app-textarea>
-
-          <app-editor
-            [required]="true"
-            [label]="
-              'To‘liq kontent (' +
-              languageForTranslatation[lang].toLowerCase() +
-              ')'
-            "
-            [control]="getFormControl(control.get('content'))"
-            class="mb-4"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.content') || ''
-            "
-          ></app-editor>
+            <mat-icon
+              class="text-inherit !w-[16px] !h-[16px]"
+              svgIcon="trash"
+            ></mat-icon>
+          </button>
         </div>
-      </ng-container>
-    </div>
-
-    <div class="mt-3 flex gap-2">
-      <!-- <button
-        *ngFor="let lang of availableLanguages"
-        (click)="addLanguage(lang)"
-        type="button"
-        class="bg-green-500 text-white px-4 py-2 rounded shadow-md hover:bg-green-600 transition-all"
-      >
-        {{ lang.toUpperCase() }} tilini qo‘shish
-      </button> -->
-
+      </div>
       <button
-        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 transition-all flex items-center text-sm font-poppins"
-        (click)="addLanguage('ru')"
+        type="button"
+        (click)="addDocumentGroup()"
+        class="bg-green-500 text-white px-4 py-2 rounded shadow hover:bg-green-600 self-start"
       >
-        <mat-icon class="mat-18">add</mat-icon>
-        Rus tilida
+        + Yangi hujjat guruhi qo‘shish
       </button>
-    </div>
+    </ng-container>
 
+    <!-- Til qo‘shish -->
+
+    <!-- Submit -->
     <button
-      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 transition-all mt-3 self-start"
       type="submit"
+      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start"
     >
       Saqlash
     </button>
