--- a/src/app/pages/page/page-editor/page-editor.component.html
+++ b/src/app/pages/page/page-editor/page-editor.component.html
@@ -1,13 +1,13 @@
-<div class="p-mb-4 bg-white text-black p-5 w-[100%] min-h-screen">
+<div class="p-mb-4 bg-white text-black p-5 w-full min-h-screen">
   <p-toast />
+  <p class="text-2xl font-bold text-black mb-5">Sahifani tahrirlash</p>
 
-  <p class="text-2xl font-bold text-black mb-5">Sahifa tahrirlash</p>
   <form
-    *ngIf="pageStore.isLoading().subscribe()"
     [formGroup]="pageForm"
     (ngSubmit)="onSubmit()"
     class="w-full flex flex-col gap-4"
   >
+    <!-- PAGE + TYPE SELECT -->
     <div class="grid grid-cols-2 gap-6">
       <app-select
         [required]="true"
@@ -17,78 +17,138 @@
         [control]="getFormControl(pageForm.get('page'))"
         [errorControl]="getFormControlError('page') || ''"
       />
-    </div>
-    <div *ngFor="let lang of languageFor; let i = index">
-      <ng-container *ngIf="contents.get(lang) as control">
-        <div class="border p-4 rounded-md bg-gray-100">
-          <p class="text-lg font-semibold mb-3">
-            Til: {{ languageForTranslatation[lang] }}
-          </p>
 
-          <app-input
-            label="Sarlavhani kiriting"
-            [control]="control.get('title')"
-            [required]="true"
-            [placeholder]="'Sarlavhani kiriting'"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.title') || ''
-            "
-          ></app-input>
-
-          <app-textarea
-            [required]="true"
-            [label]="
-              'Qisqacha tavsif (' +
-              languageForTranslatation[lang].toLowerCase() +
-              ')'
-            "
-            [control]="getFormControl(control.get('description'))"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.description') || ''
-            "
-            class="mb-4"
-          >
-          </app-textarea>
-
-          <app-editor
-            [required]="true"
-            [label]="
-              'To‘liq kontent (' +
-              languageForTranslatation[lang].toLowerCase() +
-              ')'
-            "
-            [control]="getFormControl(control.get('content'))"
-            class="mb-4"
-            [errorControl]="
-              getFormControlError('translations.' + lang + '.content') || ''
-            "
-          ></app-editor>
-        </div>
-      </ng-container>
+      <app-select
+        [required]="true"
+        label="Turi"
+        placeholder="Kontent yoki Hujjatlar"
+        [options]="[
+          { label: 'Kontent', value: 'content' },
+          { label: 'Hujjatlar', value: 'documents' }
+        ]"
+        [control]="getFormControl(pageForm.get('type'))"
+        [errorControl]="getFormControlError('type') || ''"
+      />
     </div>
 
-    <div class="mt-3 flex gap-2">
-      <!-- <button
-        *ngFor="let lang of availableLanguages"
-        (click)="addLanguage(lang)"
-        type="button"
-        class="bg-green-500 text-white px-4 py-2 rounded shadow-md hover:bg-green-600 transition-all"
+    <!-- === CONTENT TYPE === -->
+    <ng-container *ngIf="pageForm.get('type')?.value === 'content'">
+      <div *ngFor="let lang of languageFor">
+        <ng-container *ngIf="contents.get(lang) as control">
+          <div class="border p-4 rounded-md bg-gray-100 mb-4">
+            <p class="text-lg font-semibold mb-3">
+              Til: {{ languageForTranslatation[lang] }}
+            </p>
+
+            <app-input
+              label="Sarlavhani kiriting"
+              [control]="control.get('title')"
+              [required]="true"
+              [placeholder]="'Sarlavhani kiriting'"
+              [errorControl]="
+                getFormControlError('contents.' + lang + '.title') || ''
+              "
+            />
+
+            <app-textarea
+              [required]="true"
+              [label]="
+                'Qisqacha tavsif (' +
+                languageForTranslatation[lang].toLowerCase() +
+                ')'
+              "
+              [control]="control.get('description')"
+              [errorControl]="
+                getFormControlError('contents.' + lang + '.description') || ''
+              "
+              class="mb-4"
+            ></app-textarea>
+
+            <app-editor
+              [required]="true"
+              [label]="
+                'To‘liq kontent (' +
+                languageForTranslatation[lang].toLowerCase() +
+                ')'
+              "
+              [control]="getFormControl(control.get('contents'))"
+              [errorControl]="
+                getFormControlError('contents.' + lang + '.content') || ''
+              "
+              class="mb-4"
+            ></app-editor>
+          </div>
+        </ng-container>
+      </div>
+    </ng-container>
+
+    <!-- === DOCUMENT TYPE === -->
+    <ng-container *ngIf="pageForm.get('type')?.value === 'documents'">
+      <div
+        formArrayName="documents"
+        class="grid grid-cols-1 md:grid-cols-2 gap-5"
       >
-        {{ lang.toUpperCase() }} tilini qo‘shish
-      </button> -->
+        <div
+          *ngFor="let group of documentArray.controls; let i = index"
+          [formGroupName]="i"
+          class="mb-5 border p-4 rounded bg-gray-50"
+        >
+          <app-input
+            label="Hujjat guruhi nomi (ixtiyoriy)"
+            [placeholder]="'Masalan: Yillik hisobotlar'"
+            [control]="group.get('title')"
+            [required]="false"
+          />
 
+          <app-multiselect
+            [label]="'Hujjatlarni tanlang'"
+            [placeholder]="'Hujjatlar'"
+            [options]="documentOptions"
+            [control]="getFormControl(group.get('documentIds'))"
+            [required]="true"
+          />
+
+          <button
+            *ngIf="documentArray.length > 1"
+            type="button"
+            (click)="removeDocumentGroup(i)"
+            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full"
+          >
+            <mat-icon
+              class="text-inherit !w-[16px] !h-[16px]"
+              svgIcon="trash"
+            ></mat-icon>
+          </button>
+        </div>
+      </div>
       <button
-        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 transition-all flex items-center text-sm font-poppins"
+        type="button"
+        (click)="addDocumentGroup()"
+        class="bg-green-500 text-white self-start px-4 py-2 rounded shadow hover:bg-green-600"
+      >
+        + Yangi hujjat guruhi qo‘shish
+      </button>
+    </ng-container>
+
+    <!-- Til qo‘shish (faqat content uchun) -->
+    <div
+      class="mt-3 flex gap-2"
+      *ngIf="pageForm.get('type')?.value === 'content'"
+    >
+      <button
+        type="button"
         (click)="addLanguage('ru')"
+        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm"
       >
         <mat-icon class="mat-18">add</mat-icon>
         Rus tilida
       </button>
     </div>
 
+    <!-- Submit -->
     <button
-      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 transition-all mt-3 self-start"
       type="submit"
+      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start"
     >
       Saqlash
     </button>
