--- a/src/app/pages/page/pages-list/pages-list.component.html
+++ b/src/app/pages/page/pages-list/pages-list.component.html
@@ -37,49 +37,87 @@
     *ngIf="pagesList()?.length"
     class="grid grid-cols-1 justify-center bg-white rounded-xl overflow-hidden shadow-md p-4"
   >
-    <div class="grid grid-cols-3 w-full m-auto gap-3 items-center">
+    <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 w-full m-auto gap-3 items-start">
       <div
-        class="grid grid-rows-[30px_ 350px] h-full max-w-sm bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700 hover:bg-slate-200 transition-all duration-[150ms] p-[18px] font-poppins"
         *ngFor="let page of pagesList(); let i = index"
+        class="group max-w-sm w-full bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-700 rounded-2xl overflow-hidden shadow hover:shadow-md hover:scale-[1.01] transition-all duration-200 font-poppins"
       >
-        <a href="#">
+        <!-- Rasm qismi -->
+        <div class="relative">
           <img
-            class="rounded-t-lg"
-            src="/docs/images/blog/image-1.jpg"
-            alt=""
+            class="w-full h-[180px] object-cover"
+            src="/assets/unsplash.jpg"
+            alt="Preview image"
           />
-        </a>
-        <div class="p-5 grid grid-rows-[30px_40px_150px_30px]">
-          <p class="text-sm">Sahifa nomi: {{ optionsObject[page.page] }}</p>
-          <h5
-            class="mb-2 text-xl font-bold tracking-tight line-clamp-1 text-gray-900 dark:text-white"
-          >
-            Sarlavha: {{ page!.contents["uz"]!.title }}
-          </h5>
+
           <p
-            class="mb-3 font-normal text-gray-700 dark:text-gray-400 line-clamp-6"
+            class="text-xl md:text-3xl font-medium text-gray-800 dark:text-white  absolute top-10 text-center w-full"
           >
-            Izoh: {{ page!.contents["uz"]!.description }}
+            <span class="font-semibold">{{ optionsObject[page.page] }}</span>
           </p>
-          <div class="flex gap-3">
+        </div>
+
+        <!-- Kontent qismi -->
+        <div class="p-4 grid gap-2">
+          <!-- Sahifa nomi -->
+
+          <!-- Sahifa turi -->
+          <p class="text-sm text-gray-600 dark:text-gray-300 line-clamp-1">
+            Sahifa turi:
+            <span class="font-semibold">
+              {{ page.type === "documents" ? "Hujjatlar" : "Kontent" }}
+            </span>
+          </p>
+
+          <!-- Documentlar ro'yxati -->
+          <ul
+            *ngIf="page.documents?.[0]?.documentIds"
+            class="flex flex-col gap-1 text-sm text-blue-600"
+          >
+            <li
+              *ngFor="let doc of page.documents![0]?.documentIds"
+              class="hover:underline"
+            >
+              <a [href]="apiUrl + doc.document" target="_blank">{{
+                doc.title
+              }}</a>
+            </li>
+          </ul>
+
+          <!-- Sarlavha -->
+          <h5
+            *ngIf="page.contents && page.type == 'content'"
+            class="text-base font-semibold text-gray-900 dark:text-white line-clamp-1"
+          >
+            Sarlavha: {{ page.contents["uz"]?.title }}
+          </h5>
+
+          <!-- Izoh -->
+          <p
+            *ngIf="page.contents && page.type == 'content'"
+            class="text-sm text-gray-700 dark:text-gray-400 line-clamp-4"
+          >
+            Izoh: {{ page.contents["uz"]?.description }}
+          </p>
+
+          <!-- Action tugmalar -->
+          <div class="flex justify-start items-center gap-2 mt-2">
             <a
               [routerLink]="'/page-edit/' + page.page"
-              class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-green-600 w-8 h-8 rounded-full"
+              class="w-9 h-9 flex items-center justify-center bg-gray-100 hover:bg-green-100 text-gray-500 hover:text-green-600 rounded-full transition-all"
             >
-              <mat-icon
-                class="text-inherit !w-[16px] !h-[16px]"
-                svgIcon="pencil"
-              ></mat-icon>
+              <mat-icon class="!w-[16px] !h-[16px]" svgIcon="pencil"></mat-icon>
             </a>
+
             <a
-              class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-purple-600 w-8 h-8 rounded-full"
+              class="w-9 h-9 flex items-center justify-center bg-gray-100 hover:bg-purple-100 text-gray-500 hover:text-purple-600 rounded-full transition-all"
             >
               <mat-icon class="!w-[16px] !h-[16px]" svgIcon="eye"></mat-icon>
             </a>
 
             <button
               (click)="pageDelete(page._id)"
-              class="flex justify-center items-center text-xs text-gray-400 hover:bg-gray-300 hover:text-red-600 w-8 h-8 rounded-full"
+              class="w-9 h-9 flex items-center justify-center bg-gray-100 hover:bg-red-100 text-gray-500 hover:text-red-600 rounded-full transition-all"
             >
               <mat-icon class="!w-[16px] !h-[16px]" svgIcon="trash"></mat-icon>
             </button>
