--- a/src/app/pages/page/creator/creator.component.html
+++ b/src/app/pages/page/creator/creator.component.html
@@ -1,13 +1,11 @@
 <div class="p-mb-4 bg-white text-black p-5 w-full min-h-screen">
-  <p-toast />
-  <button (click)="messageOpen()">Click</button>
+  <p-toast></p-toast>
   <p class="text-2xl font-bold text-black mb-5">Sahifa yaratish</p>
 
   <form
     [formGroup]="newsForm"
     (ngSubmit)="onSubmit()"
-    class="w-full flex flex-col gap-4"
-  >
+    class="w-full flex flex-col gap-4">
     <!-- PAGE & TYPE SELECT -->
     <div class="grid grid-cols-2 gap-6">
       <app-select
@@ -16,8 +14,7 @@
         [required]="true"
         [options]="options"
         [control]="getFormControl(newsForm.get('page'))"
-        [errorControl]="getFormControlError('page') || ''"
-      />
+        [errorControl]="getFormControlError('page') || ''"></app-select>
 
       <app-select
         [label]="'Sahifa turi'"
@@ -28,8 +25,7 @@
           { label: 'Hujjatlar', value: 'documents' }
         ]"
         [control]="getFormControl(newsForm.get('type'))"
-        [errorControl]="getFormControlError('type') || ''"
-      />
+        [errorControl]="getFormControlError('type') || ''"></app-select>
     </div>
 
     <!-- === CONTENT TYPE === -->
@@ -46,100 +42,81 @@
               [control]="control.get('title')"
               [required]="true"
               [placeholder]="'Sarlavhani kiriting'"
-              [errorControl]="
-                getFormControlError('translations.' + lang + '.title') || ''
-              "
-            />
+              [errorControl]="getFormControlError('translations.' + lang + '.title') || ''"></app-input>
 
             <app-textarea
-              [label]="
-                'Qisqacha tavsif (' +
+              [label]="'Qisqacha tavsif (' +
                 languageForTranslatation[lang].toLowerCase() +
-                ')'
-              "
+                ')'"
               [required]="true"
               [control]="getFormControl(control.get('description'))"
-              [errorControl]="
-                getFormControlError('translations.' + lang + '.description') ||
-                ''
-              "
-              class="mb-4"
-            ></app-textarea>
+              [errorControl]="getFormControlError('translations.' + lang + '.description') ||
+                ''"
+              class="mb-4"></app-textarea>
 
             <app-editor
-              [label]="
-                'To‘liq kontent (' +
+              [label]="'To‘liq kontent (' +
                 languageForTranslatation[lang].toLowerCase() +
-                ')'
-              "
+                ')'"
               [required]="true"
               [control]="getFormControl(control.get('content'))"
-              [errorControl]="
-                getFormControlError('translations.' + lang + '.content') || ''
-              "
-              class="mb-4"
-            ></app-editor>
+              [errorControl]="getFormControlError('translations.' + lang + '.content') || ''"
+              class="mb-4"></app-editor>
           </div>
         </ng-container>
       </div>
       <div class="mt-3 flex gap-2">
-        <button
-          type="button"
-          (click)="addLanguage('ru')"
-          class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm"
-        >
-          <mat-icon class="mat-18">add</mat-icon>
-          Rus tilida
-        </button>
+        <div
+          class="mt-3 flex gap-2"
+          *ngIf="newsForm.get('type')?.value === 'content'">
+          <button
+            type="button"
+            (click)="addLanguage('ru')"
+            class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm">
+            <mat-icon class="mat-18">add</mat-icon>
+            Rus tilida
+          </button>
+        </div>
       </div>
     </ng-container>
 
     <!-- === DOCUMENT TYPE === -->
-    <ng-container
-      *ngIf="newsForm.get('type')?.value === 'documents' && documentOptions"
-    >
+    <ng-container *ngIf="newsForm.get('type')?.value === 'documents' && documentOptions">
       <div
         formArrayName="documents"
-        class="grid grid-cols-1 md:grid-cols-2 gap-5"
-      >
+        class="grid grid-cols-1 md:grid-cols-2 gap-5">
         <div
           *ngFor="let group of documentArray.controls; let i = index"
           [formGroupName]="i"
-          class="border p-4 rounded bg-gray-50"
-        >
+          class="border p-4 rounded bg-gray-50">
           <app-input
             [label]="'Hujjat guruhi nomi (ixtiyoriy)'"
             [placeholder]="'Masalan: Moliyaviy hujjatlar'"
             [control]="group.get('title')"
-            [required]="false"
-          />
+            [required]="false"></app-input>
 
           <app-multiselect
             [label]="'Hujjatlarni tanlang'"
             [placeholder]="'Hujjatlar'"
             [options]="documentOptions"
             [control]="getFormControl(group.get('documentIds'))"
-            [required]="true"
-          />
+            [required]="true"></app-multiselect>
 
           <button
             *ngIf="documentArray.length > 1"
             type="button"
             (click)="removeDocumentGroup(i)"
-            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full"
-          >
+            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full">
             <mat-icon
               class="text-inherit !w-[16px] !h-[16px]"
-              svgIcon="trash"
-            ></mat-icon>
+              svgIcon="trash"></mat-icon>
           </button>
         </div>
       </div>
       <button
         type="button"
         (click)="addDocumentGroup()"
-        class="bg-green-500 text-white px-4 py-2 rounded shadow hover:bg-green-600 self-start"
-      >
+        class="bg-green-500 text-white px-4 py-2 rounded shadow hover:bg-green-600 self-start">
         + Yangi hujjat guruhi qo‘shish
       </button>
     </ng-container>
@@ -149,8 +126,7 @@
     <!-- Submit -->
     <button
       type="submit"
-      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start"
-    >
+      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start">
       Saqlash
     </button>
   </form>
