--- a/src/app/pages/page/page-editor/page-editor.component.html
+++ b/src/app/pages/page/page-editor/page-editor.component.html
@@ -1,12 +1,11 @@
 <div class="p-mb-4 bg-white text-black p-5 w-full min-h-screen">
-  <p-toast />
+  <p-toast></p-toast>
   <p class="text-2xl font-bold text-black mb-5">Sahifani tahrirlash</p>
 
   <form
     [formGroup]="pageForm"
     (ngSubmit)="onSubmit()"
-    class="w-full flex flex-col gap-4"
-  >
+    class="w-full flex flex-col gap-4">
     <!-- PAGE + TYPE SELECT -->
     <div class="grid grid-cols-2 gap-6">
       <app-select
@@ -15,8 +14,7 @@
         placeholder="Sahifani tanlang"
         [options]="options"
         [control]="getFormControl(pageForm.get('page'))"
-        [errorControl]="getFormControlError('page') || ''"
-      />
+        [errorControl]="getFormControlError('page') || ''"></app-select>
 
       <app-select
         [required]="true"
@@ -27,8 +25,7 @@
           { label: 'Hujjatlar', value: 'documents' }
         ]"
         [control]="getFormControl(pageForm.get('type'))"
-        [errorControl]="getFormControlError('type') || ''"
-      />
+        [errorControl]="getFormControlError('type') || ''"></app-select>
     </div>
 
     <!-- === CONTENT TYPE === -->
@@ -45,38 +42,25 @@
               [control]="control.get('title')"
               [required]="true"
               [placeholder]="'Sarlavhani kiriting'"
-              [errorControl]="
-                getFormControlError('contents.' + lang + '.title') || ''
-              "
-            />
+              [errorControl]="getFormControlError('contents.' + lang + '.title') || ''"></app-input>
 
             <app-textarea
               [required]="true"
-              [label]="
-                'Qisqacha tavsif (' +
+              [label]="'Qisqacha tavsif (' +
                 languageForTranslatation[lang].toLowerCase() +
-                ')'
-              "
+                ')'"
               [control]="control.get('description')"
-              [errorControl]="
-                getFormControlError('contents.' + lang + '.description') || ''
-              "
-              class="mb-4"
-            ></app-textarea>
+              [errorControl]="getFormControlError('contents.' + lang + '.description') || ''"
+              class="mb-4"></app-textarea>
 
             <app-editor
               [required]="true"
-              [label]="
-                'To‘liq kontent (' +
-                languageForTranslatation[lang].toLowerCase() +
-                ')'
-              "
-              [control]="getFormControl(control.get('contents'))"
-              [errorControl]="
-                getFormControlError('contents.' + lang + '.content') || ''
-              "
-              class="mb-4"
-            ></app-editor>
+              [label]="'To‘liq kontent (' + languageForTranslatation[lang].toLowerCase() + ')'"
+              [control]="getFormControl(control.get('content'))"
+              [errorControl]="getFormControlError('contents.' + lang + '.content') || ''"
+              [content]="control.get('content')?.value || ''"
+              class="mb-4"></app-editor>
+
           </div>
         </ng-container>
       </div>
@@ -86,46 +70,39 @@
     <ng-container *ngIf="pageForm.get('type')?.value === 'documents'">
       <div
         formArrayName="documents"
-        class="grid grid-cols-1 md:grid-cols-2 gap-5"
-      >
+        class="grid grid-cols-1 md:grid-cols-2 gap-5">
         <div
           *ngFor="let group of documentArray.controls; let i = index"
           [formGroupName]="i"
-          class="mb-5 border p-4 rounded bg-gray-50"
-        >
+          class="mb-5 border p-4 rounded bg-gray-50">
           <app-input
             label="Hujjat guruhi nomi (ixtiyoriy)"
             [placeholder]="'Masalan: Yillik hisobotlar'"
             [control]="group.get('title')"
-            [required]="false"
-          />
+            [required]="false"></app-input>
 
           <app-multiselect
             [label]="'Hujjatlarni tanlang'"
             [placeholder]="'Hujjatlar'"
             [options]="documentOptions"
             [control]="getFormControl(group.get('documentIds'))"
-            [required]="true"
-          />
+            [required]="true"></app-multiselect>
 
           <button
             *ngIf="documentArray.length > 1"
             type="button"
             (click)="removeDocumentGroup(i)"
-            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full"
-          >
+            class="flex justify-center items-center text-xs text-gray-400 hover:bg-red-600 hover:text-white w-8 h-8 rounded-full">
             <mat-icon
               class="text-inherit !w-[16px] !h-[16px]"
-              svgIcon="trash"
-            ></mat-icon>
+              svgIcon="trash"></mat-icon>
           </button>
         </div>
       </div>
       <button
         type="button"
         (click)="addDocumentGroup()"
-        class="bg-green-500 text-white self-start px-4 py-2 rounded shadow hover:bg-green-600"
-      >
+        class="bg-green-500 text-white self-start px-4 py-2 rounded shadow hover:bg-green-600">
         + Yangi hujjat guruhi qo‘shish
       </button>
     </ng-container>
@@ -133,13 +110,11 @@
     <!-- Til qo‘shish (faqat content uchun) -->
     <div
       class="mt-3 flex gap-2"
-      *ngIf="pageForm.get('type')?.value === 'content'"
-    >
+      *ngIf="pageForm.get('type')?.value === 'content'">
       <button
         type="button"
         (click)="addLanguage('ru')"
-        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm"
-      >
+        class="bg-purple-500 text-white px-2 py-2 rounded-md shadow-md hover:bg-purple-600 flex items-center text-sm">
         <mat-icon class="mat-18">add</mat-icon>
         Rus tilida
       </button>
@@ -148,8 +123,7 @@
     <!-- Submit -->
     <button
       type="submit"
-      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start"
-    >
+      class="bg-purple-500 text-white px-6 py-3 rounded-md shadow-md hover:bg-purple-600 mt-3 self-start">
       Saqlash
     </button>
   </form>
