--- a/src/app/pages/news/news-list/news-list.component.html
+++ b/src/app/pages/news/news-list/news-list.component.html
@@ -49,7 +49,7 @@
         />
         <div class="flex flex-col overflow-hidden">
           <p class="text-sm font-medium text-gray-800 line-clamp-1">
-            {{ news.contents?.["uz"]?.title }}
+            {{ news?.contents?.["uz"]!.title }}
           </p>
           <p class="text-[12px] text-gray-500 line-clamp-1">{{ news.slug }}</p>
         </div>
