updated file type two

--- a/src/app/pages/documents/document-form/document-form.component.html
+++ b/src/app/pages/documents/document-form/document-form.component.html
@@ -3,7 +3,10 @@
     {{ data?._id ? "Hujjatni tahrirlash" : "Yangi hujjat qo‘shish" }}
   </h2>
 
-  <form [formGroup]="documentForm" (ngSubmit)="save()" class="space-y-4">
+  <form
+    [formGroup]="documentForm"
+    (ngSubmit)="save()"
+    class="space-y-4">
     <div>
       <!-- <label class="block text-sm mb-1"></label> -->
       <app-input
@@ -11,29 +14,25 @@
         [placeholder]="'Sarlavhani kiriting'"
         formControlName="title"
         [required]="true"
-        [errorControl]="getFormControlError('title') || ''"
-      />
+        [errorControl]="getFormControlError('title') || ''"></app-input>
       <app-file-upload
         [control]="getFormControl(documentForm.get('document'))"
         label="Hujjatni yuklang"
         [required]="true"
-        accepts="*/*"
-        [errorControl]="getFormControlError('document') || ''"
-      />
+        accepts=".jpg,.jpeg,.png,.gif,.webp,.bmp,.svg,.pdf,.doc,.docx,.xls,.xlsx,.xlsm,.csv,.ods"
+        [errorControl]="getFormControlError('document') || ''"></app-file-upload>
       <app-file-upload
         [control]="getFormControl(documentForm.get('thumbnail'))"
         label="Thumbnail uchun rasm yuklang"
         [required]="true"
-        [errorControl]="getFormControlError('thumbnail') || ''"
-      />
+        [errorControl]="getFormControlError('thumbnail') || ''"></app-file-upload>
       <app-select
         [required]="true"
         label="Hujjat turini tanlang"
         placeholder="Hujjat turini tanlang"
         [options]="options"
         [control]="getFormControl(documentForm.get('type'))"
-        [errorControl]="getFormControlError('type') || ''"
-      />
+        [errorControl]="getFormControlError('type') || ''"></app-select>
     </div>
 
     <div class="flex justify-end space-x-2 pt-4">
@@ -43,8 +42,7 @@
       <!-- [disabled]="documentForm!.invalid" -->
       <button
         type="submit"
-        class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-      >
+        class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">
         Saqlash
       </button>
     </div>
